[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/ui/crosshair.png" type="Texture" id=1]
[ext_resource path="res://art/ui/arrow.png" type="Texture" id=2]
[ext_resource path="res://art/ui/jumparrow.png" type="Texture" id=3]
[ext_resource path="res://singletons/HUD.gd" type="Script" id=4]
[ext_resource path="res://fonts/ChangaOne-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 128
use_mipmaps = true
font_data = ExtResource( 5 )

[node name="HUD" type="CanvasLayer"]
layer = 11
script = ExtResource( 4 )

[node name="Peak" type="RichTextLabel" parent="."]
margin_right = 520.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 1 )

[node name="ArrowUp" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.9999
margin_top = -208.0
margin_right = 32.0001
margin_bottom = -144.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ArrowLeft" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.9999
margin_top = -144.0
margin_right = -31.9999
margin_bottom = -80.0
rect_rotation = -89.9999
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ArrowDown" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.9999
margin_top = -144.0
margin_right = 32.0001
margin_bottom = -80.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ArrowRight" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0001
margin_top = -144.0
margin_right = 96.0001
margin_bottom = -80.0
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="ArrowJump" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 32.0001
margin_top = -80.0
margin_right = 96.0001
margin_bottom = -16.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 3 )

[node name="HealthLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -144.0
margin_right = -128.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1

[node name="ArmorLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -144.0
margin_right = 384.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
